--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.0.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.8",
     "negotiator": "^0.6.3",
     "next": "^15.1.6",
