--- a/package.json
+++ b/package.json
@@ -149,6 +149,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
+  "overrides": {
+    "fsevents": "^2.3.3"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
